2011-09-27  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_files): Bugfix in skip directive.
	We should try the match at least once even if there is no data
	after a hard skip, so that the query has an opportunity
	to do an explicit match for no data, as with @(endp).
	This commit makes possible queries like:
	@fourth_line_from_bottom
	@(skip 1 3)
	@(eof)
	This query depends on @(skip 1 3) not failing when
	it runs out of data, because @(eof) checks for htis.

2011-09-27  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (eof_s): New symbol variable.
	(obj_init): New variable initialized.

	* lib.h (eof_s): Declared.

	* match.c (match_files): New @(eof) directive explicitly
	matches end of data.

	* txr.1: Updated.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 037

	Short-circuiting behavior for @(all) and @(none).

	Obsolete forms of @(next) and @(output) syntax are gone.

	New filtering feature for substitutions in output.  Filtering to and
	from HTML built in, plus user-defined filtering with deffilter.

	Bugfixes: wrong error message in throw; lack of support for escaping
	backslashes in literals and regexes.

	* txr.c (version): Bumped to 037.

	* txr.1: Set version to 037 and bumped date.

	* configure: Bumped txr_ver to 037.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Support &#NNNN; decimal escapes also.

	* filter.c (html_hex_continue): Bail with nil if no digits
	are collected. The &#x; syntax is not translated to anything.
	(html_dec_continue): New function.
	(html_hex_handler): Function renamed to html_numeric_handler.
	(filter_init): Change function-based trie node over to
	html_numeric_handler.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Support &#xNNNN; hex escapes in html.  Bugfix in field formatting.
	chr function inlined.

	* filter.c (trie_value_at, trie_lookup_feed_char): Handle function
	case.
	(build_filter): New parameter, compress_p.
	(html_hex_continue, html_hex_handler): New functions.